--- a/images/jerman_cv.tex
+++ b/images/jerman_cv.tex
@@ -96,7 +96,7 @@
 
 \hspace*{\fill} \textbf{\textsc{\Large Michael Jerman}} \hspace*{\fill}
 
-\hspace*{\fill} University of Oregon \hspace*{\fill}  
+%% \hspace*{\fill} University of Oregon \hspace*{\fill}  
 
 
 \bigskip
@@ -112,19 +112,19 @@
 \noindent\begin{minipage}[t]{.49\textwidth}
 \begin{tabular}{ll}
     \textsc{Phone:} & (612) 564--5355 \\
-    \textsc{Email:} & mjerman@uoregon.edu \\
+    \textsc{Email:} & michael.jerman@oregonstate.edu \\
     \textsc{Website:} & www.michaeljerman.com 
 \end{tabular}
 \end{minipage}
 \hspace*{\fill}
-\begin{minipage}[t]{.49\textwidth}
-\hspace*{\fill}
-\begin{tabular}{ll}
-    \textsc{Address:} & 736 PLC \\
-    & 1285 University of Oregon \\
-    & Eugene, OR 97403
-\end{tabular}
-\end{minipage}
+%% \begin{minipage}[t]{.49\textwidth}
+%% \hspace*{\fill}
+%% \begin{tabular}{ll}
+%%     \textsc{Address:} & 736 PLC \\
+%%     & 1285 University of Oregon \\
+%%     & Eugene, OR 97403
+%% \end{tabular}
+%% \end{minipage}
 
 % \hspace*{\fill} Department of Economics \hspace*{\fill}  
 
@@ -156,10 +156,17 @@
 \noindent \textsc{\large \textbf{Education}}
 
 \begin{itemize}
-\item[] \textsc{Ph.D., Economics, 2020 (Expected)}
+\item[] \textsc{Ph.D., Economics, 2020}
 \begin{itemize}[topsep=-1em, noitemsep]
 \item[] University of Oregon, Eugene, OR
-\item[] Dissertation: \textit{Economic Applications of Remote Sensing and Machine Learning}
+\item[] Dissertation: \textit{Empirical Methods for Low-Quality Data}
+\end{itemize}
+\end{itemize}
+
+\begin{itemize}
+\item[] \textsc{M.S., Economics, 2015}
+\begin{itemize}[topsep=-1em, noitemsep]
+\item[] University of Oregon, Eugene, OR
 \end{itemize}
 \end{itemize}
 
@@ -182,7 +189,7 @@
 \noindent \textsc{\large \textbf{Research Interests}}
 
 \begin{itemize}
-\item[] Applied Microeconomics,  Environmental Economics, Growth and Development, Inequality, Public Economics, Bayesian Econometrics, Machine Learning
+\item[] Environmental Economics, Growth and Development, Inequality, Public Economics, Bayesian Econometrics, Machine Learning, Remote Sensing 
 \end{itemize}
 
 
@@ -196,30 +203,31 @@
 \begin{itemize}
 \item[] \textsc{Oregon State University}
 \begin{itemize}[topsep=-1em, noitemsep]
-\item[] Intermediate Microeconomics, \textit{Fall 2019, Spring 2019, Winter 2019, Fall 2018, Spring 2018, Winter 2018}
-\item[] Economics of Discrimination, \textit{Winter 2019, Winter 2018}
-\item[] Economics of Inequality, \textit{Fall 2018, Winter 2018}
-\item[] Game Theory, \textit{Spring 2019, Spring 2018, Winter 2018}
-\item[] Introduction to Econometrics, \textit{Fall 2019}
-\item[] Pre-Econometrics, \textit{Fall 2019}      
+\item[] Intermediate Microeconomics%% , \textit{Fall 2019, Spring 2019, Winter 2019, Fall 2018, Spring 2018, Winter 2018}
+\item[] Economics of Discrimination%% , \textit{Winter 2019, Winter 2018}
+\item[] Economics of Inequality%% , \textit{Fall 2018, Winter 2018}
+\item[] Game Theory%% , \textit{Spring 2019, Spring 2018, Winter 2018}
+\item[] Introduction to Econometrics%% , \textit{Fall 2019}
+\item[] Pre-Econometrics%% , \textit{Fall 2019}
+\item[] Growth and Development
 \end{itemize}
+
+\newpage
 
 \item[] \textsc{University of Oregon}
 \begin{itemize}[topsep=-1em, noitemsep]
-\item[] Intermediate Microeconomics, \textit{Fall 2017, Winter 2016, Fall 2015}
-\item[] Growth and Development, \textit{Summer 2017}
-\item[] Economics of Inequality, \textit{Spring 2017}
-\item[] Econometrics, \textit{Summer 2016}      
+\item[] Intermediate Microeconomics%% , \textit{Fall 2017, Winter 2016, Fall 2015}
+\item[] Growth and Development%% , \textit{Summer 2017}
+\item[] Economics of Inequality%% , \textit{Spring 2017}
+\item[] Econometrics%% , \textit{Summer 2016}      
 \end{itemize}
 
 \item[] \textsc{Online Courses} 
 \begin{itemize}[topsep=-1em, noitemsep]
-\item[] Economics of Inequality, \textit{Fall 2018}
-\item[] Introduction to Econometrics, \textit{Fall 2018, Summer 2019}
+\item[] Economics of Inequality%% , \textit{Fall 2018}
+\item[] Introduction to Econometrics%% , \textit{Fall 2018, Summer 2019}
 \end{itemize}
 \end{itemize}
-
-\newpage
 
 \bigskip
 \hrule
@@ -229,17 +237,16 @@
 \begin{itemize}
 \item[] \textsc{Working Papers}
 \begin{itemize}[]
-\item[] ``Estimating Growth and Inequality using Satellite Data''
-\item[] ``Measuring the Effects of Pollution Abatement in the Presence of Treatment \mbox{Externalities:} An Example Using Indian Data''
+\item[] ``Measuring the Effects of Pollution Abatement in the Presence of Treatment \mbox{Externalities}''
+\item[] ``The Effect of India's 1996 Lok Sabha Election on Pollution Abatement and Monitoring''
+\item[] ``Geospatial Disaggregation of Economic and Demographic Data''
 \item[] ``Race, Government Assistance, and Recovery from Natural Disasters''  
 \end{itemize}
 
 \item[] \textsc{Works in Progress}
   \begin{itemize}[]
-\item[] ``The Effect of Close Electoral Outcomes on Pollution Abatement and Monitoring: An Example from India's 1996 Lok Sabha Election''    
 \item[] ``Local Linear Regression Using an Random Forest Kernel''
 \item[] ``The Nonrandom Censoring of Indian Air and Water Quality Data''
-\item[] ``The Downstream Pollution Effects of Mountaintop Removal Mining (with Rosie Mueller and Trudy Cameron)''
 \end{itemize}
 \end{itemize}
 
@@ -249,10 +256,11 @@
 \noindent \textsc{\large \textbf{Presentations and Conferences}}
 
 \begin{itemize}
+\item[] Western Economic Association, Denver, CO, 2020. ``The Effect of Close Electoral Outcomes on Pollution Abatement and Monitoring: An Example from India's 1996 Lok Sabha Election''    
 \item[] Western Economic Association, San Francisco, CA, 2019. ``Race, Government Assistance, and Recovery from Natural Disasters''  
-\item[] University of Oregon Microeconomics Group, Eugene, OR, 2017. ``Estimating Growth and Inequality Using Satellite Data''
+%% \item[] University of Oregon Microeconomics Group, Eugene, OR, 2017. ``Estimating Growth and Inequality Using Satellite Data''
 \item[] Northwest Development Workshop, Seattle, WA, 2016. ``Measuring the Effectiveness of River Pollution Abatement in India''
-\item[] University of Oregon Microeconomics Group, Eugene, OR, 2016. ``River Pollution in India''
+%% \item[] University of Oregon Microeconomics Group, Eugene, OR, 2016. ``River Pollution in India''
 \end{itemize}
 
 \bigskip
@@ -262,32 +270,32 @@
 
 \begin{itemize}
 \item[] Kleinsorge Summer Research Award, 2015
-\item[] Graduate Teaching Fellow, 2013 -- Present
+\item[] Graduate Teaching Fellow, 2013--2019
 \end{itemize}
 
-\newpage
+%% \newpage
 
-\bigskip
-\hrule
-\bigskip 
-\noindent \textsc{\large \textbf{Software}}
+%% \bigskip
+%% \hrule
+%% \bigskip 
+%% \noindent \textsc{\large \textbf{Software}}
 
-\begin{itemize}
-\item[] \textsc{Science and Statistics}
-\begin{itemize}[topsep=-1em, noitemsep]
-\item[] R, Julia, Stata, Matlab, Python
-\end{itemize}
+%% \begin{itemize}
+%% \item[] \textsc{Science and Statistics}
+%% \begin{itemize}[topsep=-1em, noitemsep]
+%% \item[] R, Julia, Stata, Matlab, Python
+%% \end{itemize}
 
-\item[] \textsc{GIS and Spatial Analysis}
-\begin{itemize}[topsep=-1em, noitemsep]
-\item[] ArcGIS, QGIS, GRASS, GDAL, Google Earth Engine
-\end{itemize}
+%% \item[] \textsc{GIS and Spatial Analysis}
+%% \begin{itemize}[topsep=-1em, noitemsep]
+%% \item[] ArcGIS, QGIS, GRASS, GDAL, Google Earth Engine
+%% \end{itemize}
 
-\item[] \textsc{Miscellaneous} 
-\begin{itemize}[topsep=-1em, noitemsep]
-\item[] HTML, JavaScript, Bash, Latex, Lisp
-\end{itemize}
-\end{itemize}
+%% \item[] \textsc{Miscellaneous} 
+%% \begin{itemize}[topsep=-1em, noitemsep]
+%% \item[] HTML, JavaScript, Bash, Latex, Lisp
+%% \end{itemize}
+%% \end{itemize}
 
 
 %\printbibliography
