--- a/images/jerman_cv.tex
+++ b/images/jerman_cv.tex
@@ -112,7 +112,7 @@
 \noindent\begin{minipage}[t]{.49\textwidth}
 \begin{tabular}{ll}
     \textsc{Phone:} & (612) 564--5355 \\
-    \textsc{Email:} & michael.jerman@oregonstate.edu \\
+    \textsc{Email:} & mail@michaeljerman.com \\
     \textsc{Website:} & www.michaeljerman.com 
 \end{tabular}
 \end{minipage}
@@ -189,7 +189,7 @@
 \noindent \textsc{\large \textbf{Research Interests}}
 
 \begin{itemize}
-\item[] Environmental Economics, Growth and Development, Inequality, Public Economics, Bayesian Econometrics, Machine Learning, Remote Sensing 
+\item[] Environmental Economics, Growth and Development, Inequality, Public Economics, Machine Learning, Remote Sensing 
 \end{itemize}
 
 
@@ -202,7 +202,8 @@
 
 \begin{itemize}
 \item[] \textsc{Oregon State University}
-\begin{itemize}[topsep=-1em, noitemsep]
+  \begin{itemize}[topsep=-1em, noitemsep]
+    \item Industrial Organization
 \item[] Intermediate Microeconomics%% , \textit{Fall 2019, Spring 2019, Winter 2019, Fall 2018, Spring 2018, Winter 2018}
 \item[] Economics of Discrimination%% , \textit{Winter 2019, Winter 2018}
 \item[] Economics of Inequality%% , \textit{Fall 2018, Winter 2018}
@@ -222,11 +223,6 @@
 \item[] Econometrics%% , \textit{Summer 2016}      
 \end{itemize}
 
-\item[] \textsc{Online Courses} 
-\begin{itemize}[topsep=-1em, noitemsep]
-\item[] Economics of Inequality%% , \textit{Fall 2018}
-\item[] Introduction to Econometrics%% , \textit{Fall 2018, Summer 2019}
-\end{itemize}
 \end{itemize}
 
 \bigskip
